# remote_debug_mcp

./: .gitignore  AGENTS.md  DESIGN.md  README.md  config.example.yaml  pyproject.toml  tools_schema.json
src/remote/: com2telnet.py  pyproject.toml
src/remote_debug_mcp/: __init__.py  __main__.py  config.example.yaml  config_loader.py  server.py  sessions.py
